--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,24 +1,35 @@
-.button-link {
+/*Common*/
+.button {
     display: inline-block;
-    color: #fff;
+    background-color: #50c3af;
 }
 
-.header-button-link {    
-    margin-top: 80px;
-    border-radius: 40px;
-    text-transform: uppercase;
-    font-size: 15px;
+.button:hover {
+    background-color: #d2d5da;
+}
+/*Common*/
+
+/*Big*/
+.button-big {
     padding: 18px 45px;
+    border-radius: 45px;
 }
 
-.header-button-link:hover,
-.section-button-link:hover{
-    background-color: #787b80;
+.button-big-text {
+    font-size: 15px;
+    text-transform: uppercase;
+    color: #f5f5f5;
+}
+/*Big*/
+
+/*Middle*/
+.button-middle {
+    padding: 13px 17px;
+    border-radius: 22px;
 }
 
-.section-button-link {
-    margin-top: 35px;
-    border-radius: 40px;
+.button-middle-text {
     font-size: 14px;
-    padding: 12px 16px;
+    color: #f5f5f5;
 }
+/*Middle*/
