--- a/css/customs.css
+++ b/css/customs.css
@@ -1,3 +1,4 @@
+/*Header*/
 .navigation-header {
     margin-top: 50px;
     margin-bottom: 65px;
@@ -8,6 +9,9 @@
     margin-bottom: 80px;
 }
 
+/*Header*/
+
+/*Sections*/
 .button-section-2,
 .button-section-5 {
     margin-top: 40px;
@@ -32,8 +36,11 @@
     display: inline-block;
     vertical-align: middle;
 }
+/*Sections*/
 
+/*Icon font*/
 .wrapper-img-icon-20,
 .wrapper-img-icon-25 {
     margin-right: 10px;
 }
+/*Icon font*/
